--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
         "start": "webpack-dev-server --open"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.2",
+        "@material-ui/icons": "^4.11.2",
+        "bootstrap": "^4.5.3",
         "formik": "^2.1.4",
         "history": "^4.10.1",
+        "moment": "^2.29.1",
         "prop-types": "^15.7.2",
         "query-string": "^6.11.0",
         "react": "^16.8.6",
@@ -31,6 +35,7 @@
         "less": "^3.11.0",
         "less-loader": "^5.0.0",
         "path": "^0.12.7",
+        "prettier": "2.2.1",
         "style-loader": "^1.1.3",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.3.0",
