--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "formik": "^2.1.4",
         "history": "^4.10.1",
         "moment": "^2.29.1",
+        "mongoose": "^5.11.11",
         "prop-types": "^15.7.2",
         "query-string": "^6.11.0",
         "react": "^16.8.6",
